dhis-2/dhis-services/dhis-service-expression-parser/src/main/java/org/hisp/dhis/expressionparser/generated/ExpressionParser.java
// Generated from /Users/jim/dev/dhis2/dhis2-core/dhis-2/dhis-services/dhis-service-expression-parser/src/main/resources/org/hisp/dhis/expressionparser/Expression.g4 by ANTLR 4.7.2
package org.hisp.dhis.expressionparser.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		POWER=18, MINUS=19, PLUS=20, NOT=21, MUL=22, DIV=23, MOD=24, LEQ=25, GEQ=26, 
		LT=27, GT=28, EQ=29, NE=30, AND=31, OR=32, IF=33, IS_NULL=34, COALESCE=35, 
		MAXIMUM=36, MINIMUM=37, EVENT_DATE=38, DUE_DATE=39, INCIDENT_DATE=40, 
		ENROLLMENT_DATE=41, ENROLLMENT_STATUS=42, CURRENT_STATUS=43, VALUE_COUNT=44, 
		ZERO_POS_VALUE_COUNT=45, EVENT_COUNT=46, ENROLLMENT_COUNT=47, TEI_COUNT=48, 
		PROGRAM_STAGE_NAME=49, PROGRAM_STAGE_ID=50, REPORTING_PERIOD_START=51, 
		REPORTING_PERIOD_END=52, HAS_VALUE=53, MINUTES_BETWEEN=54, DAYS_BETWEEN=55, 
		WEEKS_BETWEEN=56, MONTHS_BETWEEN=57, YEARS_BETWEEN=58, CONDITION=59, ZING=60, 
		OIZP=61, ZPVC=62, NUMERIC_LITERAL=63, STRING_LITERAL=64, BOOLEAN_LITERAL=65, 
		UID=66, KEYWORD=67, WS=68;
	public static final int
		RULE_expression = 0, RULE_expr = 1, RULE_programIndicatorExpr = 2, RULE_programIndicatorVariable = 3, 
		RULE_programIndicatorFunction = 4, RULE_a0 = 5, RULE_a0_1 = 6, RULE_a1 = 7, 
		RULE_a1_2 = 8, RULE_a1_n = 9, RULE_a2 = 10, RULE_a3 = 11, RULE_dataElement = 12, 
		RULE_dataElementOperandCoc = 13, RULE_dataElementOperandAoc = 14, RULE_dataElementOperandCocAndAoc = 15, 
		RULE_programDataElement = 16, RULE_programAttribute = 17, RULE_programIndicator = 18, 
		RULE_orgUnitCount = 19, RULE_reportingRate = 20, RULE_constant = 21, RULE_days = 22, 
		RULE_numericLiteral = 23, RULE_stringLiteral = 24, RULE_booleanLiteral = 25, 
		RULE_keyword = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "expr", "programIndicatorExpr", "programIndicatorVariable", 
			"programIndicatorFunction", "a0", "a0_1", "a1", "a1_2", "a1_n", "a2", 
			"a3", "dataElement", "dataElementOperandCoc", "dataElementOperandAoc", 
			"dataElementOperandCocAndAoc", "programDataElement", "programAttribute", 
			"programIndicator", "orgUnitCount", "reportingRate", "constant", "days", 
			"numericLiteral", "stringLiteral", "booleanLiteral", "keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'V{'", "'}'", "'d2:'", "','", "'#{'", "'.'", "'.*'", 
			"'.*.'", "'D{'", "'A{'", "'I{'", "'OUG{'", "'R{'", "'C{'", "'[days]'", 
			"'^'", "'-'", "'+'", "'!'", "'*'", "'/'", "'%'", "'<='", "'>='", "'<'", 
			"'>'", "'=='", "'!='", "'&&'", "'||'", "'if'", "'isNull'", "'coalesce'", 
			"'maximum'", "'minimum'", "'event_date'", "'due_date'", "'incident_date'", 
			"'enrollment_date'", "'enrollment_status'", "'current_date'", "'value_count'", 
			"'zero_pos_value_count'", "'event_count'", "'enrollment_count'", "'tei_count'", 
			"'program_stage_name'", "'program_stage_id'", "'reporting_period_start'", 
			"'reporting_period_end'", "'hasValue'", "'minutesBetween'", "'daysBetween'", 
			"'weeksBetween'", "'monthsBetween'", "'yearsBetween'", "'condition'", 
			"'zing'", "'oizp'", "'zpvc'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "POWER", "MINUS", "PLUS", "NOT", 
			"MUL", "DIV", "MOD", "LEQ", "GEQ", "LT", "GT", "EQ", "NE", "AND", "OR", 
			"IF", "IS_NULL", "COALESCE", "MAXIMUM", "MINIMUM", "EVENT_DATE", "DUE_DATE", 
			"INCIDENT_DATE", "ENROLLMENT_DATE", "ENROLLMENT_STATUS", "CURRENT_STATUS", 
			"VALUE_COUNT", "ZERO_POS_VALUE_COUNT", "EVENT_COUNT", "ENROLLMENT_COUNT", 
			"TEI_COUNT", "PROGRAM_STAGE_NAME", "PROGRAM_STAGE_ID", "REPORTING_PERIOD_START", 
			"REPORTING_PERIOD_END", "HAS_VALUE", "MINUTES_BETWEEN", "DAYS_BETWEEN", 
			"WEEKS_BETWEEN", "MONTHS_BETWEEN", "YEARS_BETWEEN", "CONDITION", "ZING", 
			"OIZP", "ZPVC", "NUMERIC_LITERAL", "STRING_LITERAL", "BOOLEAN_LITERAL", 
			"UID", "KEYWORD", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExpressionParser.EOF, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			expr(0);
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Token fun;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public A3Context a3() {
			return getRuleContext(A3Context.class,0);
		}
		public TerminalNode IF() { return getToken(ExpressionParser.IF, 0); }
		public A1Context a1() {
			return getRuleContext(A1Context.class,0);
		}
		public TerminalNode IS_NULL() { return getToken(ExpressionParser.IS_NULL, 0); }
		public A1_nContext a1_n() {
			return getRuleContext(A1_nContext.class,0);
		}
		public TerminalNode COALESCE() { return getToken(ExpressionParser.COALESCE, 0); }
		public TerminalNode MAXIMUM() { return getToken(ExpressionParser.MAXIMUM, 0); }
		public TerminalNode MINIMUM() { return getToken(ExpressionParser.MINIMUM, 0); }
		public TerminalNode MINUS() { return getToken(ExpressionParser.MINUS, 0); }
		public TerminalNode NOT() { return getToken(ExpressionParser.NOT, 0); }
		public TerminalNode PLUS() { return getToken(ExpressionParser.PLUS, 0); }
		public DataElementContext dataElement() {
			return getRuleContext(DataElementContext.class,0);
		}
		public DataElementOperandCocContext dataElementOperandCoc() {
			return getRuleContext(DataElementOperandCocContext.class,0);
		}
		public DataElementOperandAocContext dataElementOperandAoc() {
			return getRuleContext(DataElementOperandAocContext.class,0);
		}
		public DataElementOperandCocAndAocContext dataElementOperandCocAndAoc() {
			return getRuleContext(DataElementOperandCocAndAocContext.class,0);
		}
		public ProgramDataElementContext programDataElement() {
			return getRuleContext(ProgramDataElementContext.class,0);
		}
		public ProgramAttributeContext programAttribute() {
			return getRuleContext(ProgramAttributeContext.class,0);
		}
		public ProgramIndicatorContext programIndicator() {
			return getRuleContext(ProgramIndicatorContext.class,0);
		}
		public OrgUnitCountContext orgUnitCount() {
			return getRuleContext(OrgUnitCountContext.class,0);
		}
		public ReportingRateContext reportingRate() {
			return getRuleContext(ReportingRateContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public DaysContext days() {
			return getRuleContext(DaysContext.class,0);
		}
		public ProgramIndicatorExprContext programIndicatorExpr() {
			return getRuleContext(ProgramIndicatorExprContext.class,0);
		}
		public NumericLiteralContext numericLiteral() {
			return getRuleContext(NumericLiteralContext.class,0);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class,0);
		}
		public TerminalNode POWER() { return getToken(ExpressionParser.POWER, 0); }
		public TerminalNode MUL() { return getToken(ExpressionParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(ExpressionParser.DIV, 0); }
		public TerminalNode MOD() { return getToken(ExpressionParser.MOD, 0); }
		public TerminalNode LT() { return getToken(ExpressionParser.LT, 0); }
		public TerminalNode GT() { return getToken(ExpressionParser.GT, 0); }
		public TerminalNode LEQ() { return getToken(ExpressionParser.LEQ, 0); }
		public TerminalNode GEQ() { return getToken(ExpressionParser.GEQ, 0); }
		public TerminalNode EQ() { return getToken(ExpressionParser.EQ, 0); }
		public TerminalNode NE() { return getToken(ExpressionParser.NE, 0); }
		public TerminalNode AND() { return getToken(ExpressionParser.AND, 0); }
		public TerminalNode OR() { return getToken(ExpressionParser.OR, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(58);
				match(T__0);
				setState(59);
				expr(0);
				setState(60);
				match(T__1);
				}
				break;
			case 2:
				{
				setState(62);
				((ExprContext)_localctx).fun = match(IF);
				setState(63);
				a3();
				}
				break;
			case 3:
				{
				setState(64);
				((ExprContext)_localctx).fun = match(IS_NULL);
				setState(65);
				a1();
				}
				break;
			case 4:
				{
				setState(66);
				((ExprContext)_localctx).fun = match(COALESCE);
				setState(67);
				a1_n();
				}
				break;
			case 5:
				{
				setState(68);
				((ExprContext)_localctx).fun = match(MAXIMUM);
				setState(69);
				a1_n();
				}
				break;
			case 6:
				{
				setState(70);
				((ExprContext)_localctx).fun = match(MINIMUM);
				setState(71);
				a1_n();
				}
				break;
			case 7:
				{
				setState(72);
				((ExprContext)_localctx).fun = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==MINUS || _la==NOT) ) {
					((ExprContext)_localctx).fun = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(73);
				expr(23);
				}
				break;
			case 8:
				{
				setState(74);
				match(PLUS);
				setState(75);
				expr(22);
				}
				break;
			case 9:
				{
				setState(76);
				dataElement();
				}
				break;
			case 10:
				{
				setState(77);
				dataElementOperandCoc();
				}
				break;
			case 11:
				{
				setState(78);
				dataElementOperandAoc();
				}
				break;
			case 12:
				{
				setState(79);
				dataElementOperandCocAndAoc();
				}
				break;
			case 13:
				{
				setState(80);
				programDataElement();
				}
				break;
			case 14:
				{
				setState(81);
				programAttribute();
				}
				break;
			case 15:
				{
				setState(82);
				programIndicator();
				}
				break;
			case 16:
				{
				setState(83);
				orgUnitCount();
				}
				break;
			case 17:
				{
				setState(84);
				reportingRate();
				}
				break;
			case 18:
				{
				setState(85);
				constant();
				}
				break;
			case 19:
				{
				setState(86);
				days();
				}
				break;
			case 20:
				{
				setState(87);
				programIndicatorExpr();
				}
				break;
			case 21:
				{
				setState(88);
				numericLiteral();
				}
				break;
			case 22:
				{
				setState(89);
				stringLiteral();
				}
				break;
			case 23:
				{
				setState(90);
				booleanLiteral();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(114);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(93);
						if (!(precpred(_ctx, 24))) throw new FailedPredicateException(this, "precpred(_ctx, 24)");
						setState(94);
						((ExprContext)_localctx).fun = match(POWER);
						setState(95);
						expr(24);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(96);
						if (!(precpred(_ctx, 21))) throw new FailedPredicateException(this, "precpred(_ctx, 21)");
						setState(97);
						((ExprContext)_localctx).fun = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MUL) | (1L << DIV) | (1L << MOD))) != 0)) ) {
							((ExprContext)_localctx).fun = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(98);
						expr(22);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(99);
						if (!(precpred(_ctx, 20))) throw new FailedPredicateException(this, "precpred(_ctx, 20)");
						setState(100);
						((ExprContext)_localctx).fun = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==MINUS || _la==PLUS) ) {
							((ExprContext)_localctx).fun = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(101);
						expr(21);
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(102);
						if (!(precpred(_ctx, 19))) throw new FailedPredicateException(this, "precpred(_ctx, 19)");
						setState(103);
						((ExprContext)_localctx).fun = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LEQ) | (1L << GEQ) | (1L << LT) | (1L << GT))) != 0)) ) {
							((ExprContext)_localctx).fun = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(104);
						expr(20);
						}
						break;
					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(105);
						if (!(precpred(_ctx, 18))) throw new FailedPredicateException(this, "precpred(_ctx, 18)");
						setState(106);
						((ExprContext)_localctx).fun = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==EQ || _la==NE) ) {
							((ExprContext)_localctx).fun = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(107);
						expr(19);
						}
						break;
					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(108);
						if (!(precpred(_ctx, 17))) throw new FailedPredicateException(this, "precpred(_ctx, 17)");
						setState(109);
						((ExprContext)_localctx).fun = match(AND);
						setState(110);
						expr(18);
						}
						break;
					case 7:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(111);
						if (!(precpred(_ctx, 16))) throw new FailedPredicateException(this, "precpred(_ctx, 16)");
						setState(112);
						((ExprContext)_localctx).fun = match(OR);
						setState(113);
						expr(17);
						}
						break;
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ProgramIndicatorExprContext extends ParserRuleContext {
		public ProgramIndicatorVariableContext programIndicatorVariable() {
			return getRuleContext(ProgramIndicatorVariableContext.class,0);
		}
		public ProgramIndicatorFunctionContext programIndicatorFunction() {
			return getRuleContext(ProgramIndicatorFunctionContext.class,0);
		}
		public ProgramIndicatorExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programIndicatorExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitProgramIndicatorExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramIndicatorExprContext programIndicatorExpr() throws RecognitionException {
		ProgramIndicatorExprContext _localctx = new ProgramIndicatorExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_programIndicatorExpr);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				match(T__2);
				setState(120);
				programIndicatorVariable();
				setState(121);
				match(T__3);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				match(T__4);
				setState(124);
				programIndicatorFunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramIndicatorVariableContext extends ParserRuleContext {
		public Token var;
		public TerminalNode EVENT_DATE() { return getToken(ExpressionParser.EVENT_DATE, 0); }
		public TerminalNode DUE_DATE() { return getToken(ExpressionParser.DUE_DATE, 0); }
		public TerminalNode INCIDENT_DATE() { return getToken(ExpressionParser.INCIDENT_DATE, 0); }
		public TerminalNode ENROLLMENT_DATE() { return getToken(ExpressionParser.ENROLLMENT_DATE, 0); }
		public TerminalNode ENROLLMENT_STATUS() { return getToken(ExpressionParser.ENROLLMENT_STATUS, 0); }
		public TerminalNode CURRENT_STATUS() { return getToken(ExpressionParser.CURRENT_STATUS, 0); }
		public TerminalNode VALUE_COUNT() { return getToken(ExpressionParser.VALUE_COUNT, 0); }
		public TerminalNode ZERO_POS_VALUE_COUNT() { return getToken(ExpressionParser.ZERO_POS_VALUE_COUNT, 0); }
		public TerminalNode EVENT_COUNT() { return getToken(ExpressionParser.EVENT_COUNT, 0); }
		public TerminalNode ENROLLMENT_COUNT() { return getToken(ExpressionParser.ENROLLMENT_COUNT, 0); }
		public TerminalNode TEI_COUNT() { return getToken(ExpressionParser.TEI_COUNT, 0); }
		public TerminalNode PROGRAM_STAGE_NAME() { return getToken(ExpressionParser.PROGRAM_STAGE_NAME, 0); }
		public TerminalNode PROGRAM_STAGE_ID() { return getToken(ExpressionParser.PROGRAM_STAGE_ID, 0); }
		public TerminalNode REPORTING_PERIOD_START() { return getToken(ExpressionParser.REPORTING_PERIOD_START, 0); }
		public TerminalNode REPORTING_PERIOD_END() { return getToken(ExpressionParser.REPORTING_PERIOD_END, 0); }
		public ProgramIndicatorVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programIndicatorVariable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitProgramIndicatorVariable(this);
			else return visitor.visitChildren(this);
		}
	}
